--- a/VRChat/14/1306014.html
+++ b/VRChat/14/1306014.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "CXQLBC5ZyBZ4RsEXLeiDl9BrBfuzI/px3iRTplBeDgM="></script>
+    "uPSzhwcHVoCKHTWFWyLYepmeJdfBluBsJiEZUWoZrxo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"枝豆","description":"主にVRchatでの使用を想定した枝豆の3Dモデルデータです。\n\n内容物\n・3Dモデルの.blendデータ\n・3Dモデルの.fbxデータ\n・テクスチャの.pngデータ\n\n利用規約\n・内容物自体の二次配布はご遠慮ください。\n・商用利用や改変等自由にご使用ください。\n・クレジット表記は不要です。\n\n","url":"https://booth.pm/ja/items/1306014","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dba35dca-d107-422b-b707-9076e0edd96d/i/1306014/38fde6ed-6cd7-409b-ace5-25c02a147574_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CXQLBC5ZyBZ4RsEXLeiDl9BrBfuzI/px3iRTplBeDgM="></script>
+    nonce="uPSzhwcHVoCKHTWFWyLYepmeJdfBluBsJiEZUWoZrxo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -332,9 +332,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
