--- a/VRChat/14/1305314.html
+++ b/VRChat/14/1305314.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "CCspILK4WrIRX69mfGqiKXpIU9UymV2rt7F0+AUOsJ0="></script>
+    "qaqbGoYOg/J/ttAES3ozTDwREOrQJEr5hHfb9jLOIAs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホイルシェーダー","description":"コレクションカード等でよくあるホイル加工を再現するシェーダーです。\n有料版はこちら\nhttps://hige-ex.booth.pm/items/1305673\n※内容物の違いはありません。","url":"https://booth.pm/ja/items/1305314","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5429e8ac-18c9-4230-bb42-4b10387829b5/i/1305314/f14f4e62-d66b-4fd6-b8fc-b817360046f7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CCspILK4WrIRX69mfGqiKXpIU9UymV2rt7F0+AUOsJ0="></script>
+    nonce="qaqbGoYOg/J/ttAES3ozTDwREOrQJEr5hHfb9jLOIAs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -338,9 +338,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
