--- a/VRChat/90/1304790.html
+++ b/VRChat/90/1304790.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XRK0nU5y8N/7Rp5S0CNHBEWTnQyg/UK8e53VvRwEXkc="></script>
+    "n1kWiWnaWYBkzBSih4EhYDmv0I0TG6XNROLjZL8BBYU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"New_MechaFoxMask_Set","description":"model:New_MechaFoxMask_Set\n\n■概要■\n使用する際にはある程度のUnityの知識が必要です。アバターではないのでご注意ください。\n\nunitypackage、fbx、png形式のtextureが入っています。\n\n主にVRChat、Unity等で使用する事が前提のデータです。\n\nサンプル画像ではまんまるしぇーだーを使用していますが内容ではstandardになっています。好きなシェーダーをお使いください。\n\n■サンプル画像にあるカラーバリエーションも同梱してあります。\n\n\n■利用規約■\n・著作権はutako(Twitter:@utako_png)が保有しています。\n・改変前、改変後を含むこのモデルの販売、再配布を禁止します。\n・本データを使用し何らかの問題が発生した場合、制作者は一切責任をとりません。\n・本利用規約は予告なく変更される場合があります。\n\n■質問、お問い合わせ等■\nTwitter：@utako_png","url":"https://booth.pm/ja/items/1304790","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/88391aae-f2c2-47df-bc5c-81b896c5f767/i/1304790/f50666b7-756e-4588-9800-54d649926eef_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XRK0nU5y8N/7Rp5S0CNHBEWTnQyg/UK8e53VvRwEXkc="></script>
+    nonce="n1kWiWnaWYBkzBSih4EhYDmv0I0TG6XNROLjZL8BBYU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
