--- a/VRChat/00/1303500.html
+++ b/VRChat/00/1303500.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kmLPnZpCP6kpOiMdfcV7pJa4R7dDee5Hz8xXcx6Z8DE="></script>
+    "/ipzjFAPlQCaMToEKlsYGPUQRZfWSsCSmRjfwn+ztXk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリスタル的な何か","description":"※[4/4 12:27更新]メッシュが分割されてなかったことに気づいたので治しました、再DL頼む～～～\n\n\n[概要]\n\n結晶的なやつです、そこまで出来が良いわけではない。\n\nアバターに生やしたりワールドに生やしたりできるんですが\n一個一個分離してるのでUnityよりBlenderでまとめたほうが楽だと思います。\n\n※この製品には\nUNIUNI氏制作のCrystal Shader（ https://uniunishop.booth.pm/items/1148311 ）\nを同梱してあります。\n（Copyright (c) 2018 UNIUNI）\n\n\n\n[利用規約]\n\n改変はご自由に\n再配布・自作発言・迷惑行為等への使用はご遠慮ください\n\n\n\n[制作]\nあしっど\nTwitter ID:@acid_aine\n\n連絡はTwitterの方まで","url":"https://booth.pm/ja/items/1303500","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9849ed29-b5f0-4585-b783-512af5c80a93/i/1303500/99e79bb9-cbc6-4e6d-a0a5-cca205c5760d_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kmLPnZpCP6kpOiMdfcV7pJa4R7dDee5Hz8xXcx6Z8DE="></script>
+    nonce="/ipzjFAPlQCaMToEKlsYGPUQRZfWSsCSmRjfwn+ztXk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
