--- a/VRChat/73/1302873.html
+++ b/VRChat/73/1302873.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RAvV1s6LKCBgR0YRvUGxSRl3UUDkuASj07JsujUmde0="></script>
+    "9Dz1R9pbSltki8HzKn9qJEd6HmMQRaMNFmNoUjP6V/A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヒ　ヨ　コ","description":"【はじめに】\nクソみたいなUVを整理整頓して編集しやすくしていただいたKuroharuさんに大いなる感謝の意を添えて配布させていただきます。\nこの度、Quest対応版のヒヨコをご用意いたしました。\nQuest版のご利用の場合、新規sceneにて、UnityのFile\u003eBuild SettingからAndroidをSwitch Platformしてからインポートください。\n\n【商品説明】\nヒヨコとおぼしき生命体です。(社交辞令)\nお好みでカスタマイズしてください。\n彼ら心なしか喜びますから。\n\n頂点：13516\n面：26933\n三角面：26933\nテクスチャ：2048px\n\n【含まれる物】\n-ヒヨコ本体のFBX\n-テクスチャ\n-Blenderファイル(骨付き)\n-Unityパッケージ\n\n【言い訳】\n・リップシンクはまた今度付けます(付きました)\n・多少画像と違うヒヨコの場合があります。\n・不具合等ありましたらお声かけ下さい。\n\n【リリースノート】\n・2019/04/10：ヒヨコ誕生\n・2019/10/30：ダディクールみたいな顔つけました。\n・2019/11/10：風邪ひきました。\n・2019/11/21：VRMHIYOKOを追加しました。\n\n【使用に関する注意】\n・モデル、テクスチャ、顔の改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n　（VRChat内クローンでの配布は可能です。）\n・ゲームや配信、商用利用等に使えます。\n・サムネイル画像集ではArkToonShaderを使用しています。\n・VRChatで使用することを想定しています。\n・規則正しい生活して。","url":"https://booth.pm/ja/items/1302873","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3534b2b3-9894-4d0f-b985-002792a00148/i/1302873/9a2a7227-58e6-4d5e-b19c-95fd6a8a5633_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RAvV1s6LKCBgR0YRvUGxSRl3UUDkuASj07JsujUmde0="></script>
+    nonce="9Dz1R9pbSltki8HzKn9qJEd6HmMQRaMNFmNoUjP6V/A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
