--- a/VRChat/08/1301608.html
+++ b/VRChat/08/1301608.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GJXvAZA8jufjnucXyEgp9Q4G3QQoK7cEFIgbEraNSBk="></script>
+    "/umSXyySP53Ob7f7bE/paS6aPnDC0P7HPM5A5tEevOY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定アバター ミルコ=ファン=ハウテン","description":"ミルクココアっぽいので名付けましたヾ(๑╹◡╹)ﾉ\"\nつよい？おまえは何を言っているんだ\n\n耳は普通に４つあります(o╹◡╹o)\n中は繋がってる\nわたしは何を言っているんだ\n\n大幅値引きしました～ヾ(๑╹◡╹)ﾉ\"\n","url":"https://booth.pm/ja/items/1301608","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1301608/8088e749-6bac-46c6-b204-d5668d9eb84b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GJXvAZA8jufjnucXyEgp9Q4G3QQoK7cEFIgbEraNSBk="></script>
+    nonce="/umSXyySP53Ob7f7bE/paS6aPnDC0P7HPM5A5tEevOY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -507,9 +507,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
