--- a/VRChat/36/1301536.html
+++ b/VRChat/36/1301536.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Fuz0TN9ywip87CzycdIP1RB1gzuTOtKk/QZKzLjWqBM="></script>
+    "b7c4cihP4j22rYfQDvMaeuzrUilUvlsNoVcfdAAVfTo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無配】墺式先進戦闘銃【VRC想定】","description":"1980～90年代に行われた米軍の次世代戦闘銃開発計画、ACR計画にオーストリアの某社が提出したかっこいいあの銃をおおむね再現した.fbxの3Dモデルです。\n△11173\nVRChatやその他の諸々にお使いください。\n\nフレシェット弾を毎分1200発で発射し、リングプライマーの樹脂薬莢、極めつけは垂直に上下する薬室というめちゃくちゃ冒険しているおもしろ銃です。\nどうやらエヴァのパレットガンのモデルになったりしてるそうです。\nトリガー、セレクター、チャージングハンドルがシェイプキーで動かして遊べます。\n\n資料を斜め読みした程度で作ったのでまた粗の多いことこの上ないですが、冷戦終結期のお供にどうぞ～\n\n\n本体の.fbxファイルと、本体とマガジンのテクスチャ、およびそのUV展開図の.pngファイルを綴じたunitypackageが入っています。\n\n当モデルを使用したゲーム作品や映像作品での収益化は自由です。\n\nまた、テクスチャやモデル諸々の改変も自由ですが、再配布ができる形でのアップロードはお控えください。","url":"https://booth.pm/ja/items/1301536","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/59cf5824-c16e-422b-929f-f968efccb887/i/1301536/fda62b52-6dbb-4462-906e-e89bdd34a629_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Fuz0TN9ywip87CzycdIP1RB1gzuTOtKk/QZKzLjWqBM="></script>
+    nonce="b7c4cihP4j22rYfQDvMaeuzrUilUvlsNoVcfdAAVfTo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -575,9 +575,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
