--- a/VRChat/98/1302398.html
+++ b/VRChat/98/1302398.html
@@ -105,7 +105,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xBITJg/Z5DrxW9g8zYy4L3RFd+Z3aYH9rVlA9hX1ZAg="></script>
+    "5prvOrUpRuANDLpao3Lh4QpQyMI296hsC7BNBzsVBEw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ビーチグッズ3D","description":"unityパッケージファイルです。\nビーチ関連の小物などが入っています。\n\n---------------------------------------------------------\n\n内容とポリゴン数は以下の通りです。(三角形のポリゴン数)\n\nanchor: 542\nbeach ball: 224\nchair: 360\nbeach parasol: 382\nbeach sandal: 786\nbucket: 660\ndiving fins: 392\nsand castle Lv1: 92\nsand castle Lv2: 260\nsand castle Lv3: 1408\nscoop: 120\nship wheel: 7060\nsunglasses: 694\nsurf board: 76\nukiwa: 506\n\n---------------------------------------------------------\n\n全て１メッシュ、１マテリアルで作成されています。\nマテリアル１つにつき、３つのテクスチャを用意しました。(defuse, metalnesssmoothness, normal) 512*512\n\n\n全てプレハブ化してあります。\nユニティパッケージをインポートしてください。\nプレハブフォルダから必要な小物をドラッグアンドドロップするだけです。ビーチらしくなります。\n\n---------------------------------------------------------\n\n使い方等に関して禁止事項はありません。\n好きに使ってください。クレジット不要です。\n\n---------------------------------------------------------\n\nゲーム開発者の皆さんを応援しています。頑張って;D\n\n\n\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1302398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/f0f418cd-9f62-481f-8824-9dc7e45e610a/i/1302398/1f67ac3c-62fb-4bdb-bff2-a0501517c340_base_resized.jpg"}
     </script>
@@ -116,7 +116,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xBITJg/Z5DrxW9g8zYy4L3RFd+Z3aYH9rVlA9hX1ZAg="></script>
+    nonce="5prvOrUpRuANDLpao3Lh4QpQyMI296hsC7BNBzsVBEw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
