--- a/VRChat/21/1302021.html
+++ b/VRChat/21/1302021.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kFrbp3f2DrMeWRweiZyFmDZ8HEGzP8rI5+zzOMZZM1A="></script>
+    "cgtzNVVLhBiD4JwI1LoiYQGoiDK2ugXcZKkrAw1aMcM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"丸太","description":"[これいる？]\n\n丸太です\n2684ポリゴン\n長さは3mくらい\n\nなんと今回は通常のfbxの他に\nヒューマノイドボーンを入れて自動ウェイトをかけて\nVRC_AvatarDescriptorを入れてある\nVRChatですぐ使えるヒューマノイド丸太もあるぞ\n\n動きが気持ち悪いので気をつけてね\n\n\n[更新履歴]\n・2021/12/04\nノーマルマップを追加\nfbxの中にLampが入ってたのを修正\nヒューマノイド丸太をSDK3.0に対応\n\n\n[一応の利用規約]\n\n改変・再配布ご自由に\n\n自作発言しようとする人達へ\n虚偽がバレた瞬間信用は一瞬にして崩れるので\nまぁ一応しないでね\n\nただしこいつの利用は節度を守ってお願いします\n迷惑行為等には使用しないでください\n報告があり次第、無期限の配信停止をします\nあと気持ち悪いって言われたら素直にアバターを変えましょう\n\n\n\n[制作]\nあしっど\nTwitter ID:@acid_aine\n\n連絡はTwitterの方まで","url":"https://booth.pm/ja/items/1302021","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9849ed29-b5f0-4585-b783-512af5c80a93/i/1302021/8f237323-3194-4631-86f2-74944a8085ad_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kFrbp3f2DrMeWRweiZyFmDZ8HEGzP8rI5+zzOMZZM1A="></script>
+    nonce="cgtzNVVLhBiD4JwI1LoiYQGoiDK2ugXcZKkrAw1aMcM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -346,9 +346,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
